fix #525, dropdown width on mobile fixed

--- a/app/components/ClientSide/Charts/DistributionCharts/styles.module.css
+++ b/app/components/ClientSide/Charts/DistributionCharts/styles.module.css
@@ -31,3 +31,13 @@
 .margin10 {
   margin-left: 10px;
 }
+
+.select {
+  width: 420px;
+}
+
+@media screen and (max-width: 915px) {
+  .select {
+    width: 320px;
+  }
+}
