--- a/app/components/ClientSide/Charts/GraphCharts/styles.module.css
+++ b/app/components/ClientSide/Charts/GraphCharts/styles.module.css
@@ -3,3 +3,13 @@
   width: 100%;
   height: 100%;
 }
+
+.select {
+  width: 420px;
+}
+
+@media screen and (max-width: 915px) {
+  .select {
+    width: 320px;
+  }
+}
